--- a/app/model/model.ipynb
+++ b/app/model/model.ipynb
@@ -169,11 +169,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e2c6f626",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.save('modelapi_shitty.h5')"
+   ]
   },
   {
    "cell_type": "code",
